# prism

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  operators.md  overview.md  scaling.md  scoring.md  security.md  submissions.md
docs/miner/: README.md
docs/validator/: README.md
examples/tiny-1m/: README.md  architecture.py  prism.yaml  training.py
scripts/: stage_reference_tokenizers.py  staging_e2e.py
src/prism_challenge/: __init__.py  app.py  auth.py  config.py  coordination.py  db.py  gpu_scheduler.py  models.py  queue.py  repository.py  routes.py  runtime_config.py  validator_executor.py  weights.py  worker.py
src/prism_challenge/evaluator/: anti_cheat.py  architecture_report.py  bench_config.py  checkpoint_publisher.py  checkpoints.py  component_agents.py  component_signatures.py  components.py  container.py  dataset.py  distributed_contract.py  heldout.py  interface.py  l1_syntax.py  l2_proxy.py  l3_train.py  l4_benchmark.py  lium_client.py  llm_review.py  metrics.py  mock_reexec.py  modes.py  reference_tokenizers.py  review_rules.py  sandbox.py  schemas.py  scoring.py  source_similarity.py  static_instantiation.py  synthetic.py  tokenizer.py  training.py
src/prism_challenge/evaluator/benchmarks/: __init__.py  efficiency.py  generalism.py  heldout.py  learning_speed.py  long_context.py  reasoning.py  stability.py  suite.py
src/prism_challenge/sdk/: __init__.py  app_factory.py  auth.py  config.py  decorators.py  schemas.py
src/prism_challenge/sdk/executors/: __init__.py  docker.py
tests/: conftest.py  test_api.py  test_architecture_deduplication.py  test_architecture_metadata.py  test_architecture_ownership.py  test_artifact_manifest.py  test_benchmarks.py  test_checkpoint_workspace.py  test_claim_race_orphan.py  test_component_rewards.py  test_config.py  test_container_evaluator.py  test_data_prep_unit.py  test_docker_executor.py  test_docs_contract.py  test_end_to_end_nas_lifecycle.py  test_eval_jobs_health.py  test_evaluator.py  test_gpu_scheduler_contract.py  test_held_expiry.py  test_leaderboard_epoch.py  test_lium_client.py  test_llm_review_schema.py  test_master_assignments.py  test_platform_v10_job_wiring.py  test_prism_anticheat_heldout_rce.py  test_prism_anticheat_param_cap_evasion.py  test_prism_anticheat_weights_network_io.py  test_prism_architecture_name.py  test_prism_checkpoint_publisher.py  test_prism_compute_instrumentation.py  test_prism_container_budget.py  test_prism_container_compute_block.py  test_prism_container_harness.py  test_prism_container_heldout.py  test_prism_contract_param_cap_and_arch.py  test_prism_coordination.py  test_prism_cpu_reexec.py  test_prism_dataset_reference_tokenizers.py  test_prism_distributed_contract.py  (+30 more)
