[project]
name = "prism-challenge"
version = "0.1.0"
description = "Prism neural architecture search challenge for Platform Network"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "PyYAML>=6.0",
  "torch>=2.3",
  "uvicorn[standard]>=0.30",
  "langchain-openai>=0.2.0"
]

[project.optional-dependencies]
bittensor = ["bittensor>=9"]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
prism-worker = "prism_challenge.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prism_challenge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
packages = ["prism_challenge"]
ignore_missing_imports = true
warn_unused_ignores = false

[tool.coverage.run]
source = ["prism_challenge"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
